# genkeyboard

./: Cargo.toml  LICENSE  README.md
src/: compose.rs  main.rs
src/automaton/: mod.rs
src/kbdlayout/: greek.rs  latin.rs  mod.rs  russian.rs
src/kbdwriter/: emacs.rs  graphviz.rs  list.rs  mod.rs  vimfn.rs
